# sigma-engine

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml
.github/workflows/: ci.yml
benches/: dag_execution.rs  end_to_end.rs  prefilter_performance.rs  rule_scaling.rs  vm_execution.rs
benches/common/: metrics.rs  mod.rs  setup.rs  test_data.rs
examples/: advanced_usage.rs  basic_usage.rs  engine_demo.rs  hybrid_execution_demo.rs  multi_layer_integration.rs  streaming_kafka_integration.rs
examples/data/: sample_events.jsonl
scripts/: analyze_performance.py  coverage.sh  demo_2k_rules.sh  pre-commit.sh  profile.sh  quality.sh  run_scaling_benchmarks.sh  setup-hooks.sh
src/: config.rs  engine.rs  error.rs  ir.rs  lib.rs  vm.rs
src/compiler/: codegen.rs  dag_codegen.rs  field_mapping.rs  mod.rs  parser.rs
src/dag/: batch_evaluator.rs  builder.rs  engine.rs  evaluator.rs  mod.rs  optimizer.rs  parallel_evaluator.rs  prefilter.rs  types.rs
src/matcher/: advanced.rs  builder.rs  cache.rs  compiled.rs  context.rs  defaults.rs  fields.rs  filters.rs  functional.rs  hooks.rs  mod.rs  modifiers.rs  types.rs
src/profiling/: mod.rs
src/streaming/: adaptive_batcher.rs  backpressure.rs  batch_processor.rs  engine.rs  metrics.rs  mod.rs
tests/: compiler_integration_test.rs  end_to_end_test.rs  integration_test.rs  matcher_basic_test.rs  modifier_integration_test.rs  prefilter_integration_test.rs  sigma_spec_validation.rs  stress_test.rs
tests/rules/: advanced_rule.yml  complex_rule.yml  malformed_rule.yml  network_connection.yml  process_creation.yml  real_world_complex.yml  simple_rule.yml  with_not.yml
