[package]
name = "sigma-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.72.0"
authors = ["SIGMA Engine Contributors"]
description = "High-performance SIGMA detection engine for security rules"
documentation = "https://docs.rs/sigma-engine"
homepage = "https://github.com/cawalch/sigma-engine"
repository = "https://github.com/cawalch/sigma-engine"
license = "MIT OR Apache-2.0"
keywords = ["sigma", "detection", "security", "engine", "rules"]
categories = ["parsing", "algorithms", "development-tools"]
readme = "README.md"
exclude = [
    "target/",
    "benches/",
    "scripts/",
    "docs/",
    ".github/",
    "*.svg",
    "*.png"
]

[lib]
name = "sigma_engine"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Core dependencies for performance

# Core dependencies for matching capabilities
regex = "1.10"
base64 = "0.22"
aho-corasick = "1.1"

# Core dependencies for parallel processing
rayon = "1.8"

# Optional dependencies
simd-json = { version = "0.13", optional = true }

[features]
default = []

metrics = []
profiling = ["dep:simd-json"]
full = ["metrics", "profiling"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"


[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "rule_scaling"
harness = false

[[bench]]
name = "dag_execution"
harness = false

[[bench]]
name = "prefilter_performance"
harness = false



[profile.bench]
debug = true
